CICD/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: front
spec:
    replicas: 3
    selector:
        matchLabels:
            app: frontapp
    template:
        metadata:
            name: front-application
            labels:
                app: frontapp
        spec:
            containers:
                - image: mikenieto/frontapp:v1
                  name: front-application-image
