CICD/k8s/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
    name: frontapp-svc
spec:
    type: LoadBalancer
    ports:
        - port: 80
          targetPort: 8080
    selector:
        app: frontapp
