CICD/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: frontapp-svc
spec:
    ports:
        - port: 80
          targetPort: 8080
    selector:
        app: frontapp
