CICD/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: frontapp
spec:
    rules:
        - host: frontapp.example.com
          http:
              paths:
                  - path: /
                    backend:
                        serviceName: frontapp-svc
                        servicePort: 80
